--- a/WebContent/css/cws.css
+++ b/WebContent/css/cws.css
@@ -144,7 +144,7 @@ input{
 }
   /*Save and Clear Button (Popup)*/
 .save{
-  border-radius: 5px;
+  border-radius: 3px;
   background:rgba(0,0,0,0);
   border: 3px solid #000;
   padding: 8px 20px;
@@ -152,13 +152,16 @@ input{
   margin-left: 10px;
   cursor: pointer;
   transition: all 0.3s ease-out;
+  width: 150px;
+  height:35px;
+
 }
 .save:hover, .save:focus{
 	background: #000;
 	color: #fff;
 }
 .clear{
-  border-radius: 5px;
+  border-radius: 3px;
   background:rgba(0,0,0,0);
   border: 3px solid #000;
   padding: 8px 20px;
@@ -166,6 +169,9 @@ input{
   margin-left: 50px;
   cursor: pointer;
   transition: all 0.3s ease-out;
+  width: 150px;
+  height:35px;
+
 }
 .clear:hover, .clear:focus{
 	background: #000;
@@ -173,7 +179,7 @@ input{
 }
 hr {
   border: 10;
-  width: 90%;
+  width: 80%;
   margin-top: 45px;
   height: 3px;
   background-color: black;
@@ -190,7 +196,7 @@ a{
 }
 table th,
 table td{
-  text-align: left;
+  text-align: center;
   font-size: 12px;
 }
 table.layout{
