--- a/WebContent/css/cws.css
+++ b/WebContent/css/cws.css
@@ -130,10 +130,10 @@ a {
   max-height: 50%;
   overflow: auto;
 }
-
 label{
   width: 50px
   font-size: 12px;
+
 }
 
 input{
@@ -177,7 +177,7 @@ input{
 }
 hr {
   border: 10;
-  width: 100%;
+  width: 80%;
   margin-top: 45px;
   height: 3px;
   background-color: black;
@@ -192,113 +192,83 @@ hr {
   margin-left: 10px;
   cursor: pointer;
   transition: all 0.3s ease-out;
-  width: 100px;
+  width: 150px;
   height:35px;
 
 }
   /*Table)*/
-a{
-  color: #739931;
-  font-size: 15px;
-}
-.page{
-  max-width: 80em;
-  margin: 0 auto;
-}
-table th,
-table td{
-  text-align: center;
-  font-size: 12px;
-}
-table.layout{
-  width: 100%;
-  border-collapse: collapse;
-}
-table.display{
-  margin: 1em 0;
-}
-table.display th,
-table.display td{
-  border: 1px solid #B3BFAA;
-  padding: .5em 1em;
-}
+  h1{
+    font-size: 30px;
 
-table tr{
-  height:
-}
+    text-transform: uppercase;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 15px;
+  }
+  table{
+    width:100%;
+    table-layout: fixed;
+  }
+  .tbl-header{
+    background-color: rgba(255,255,255,0.3);
+   }
+  .tbl-content{
+    height:300px;
+    overflow-x:auto;
+    margin-top: 0px;
+    border: 1px solid rgba(255,255,255,0.3);
+  }
+  th{
+    padding: 20px 15px;
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    background-color: #db3232;
+    text-transform: uppercase;
+    color:white;
+  }
+  td{
+    padding: 15px;
+    text-align: left;
+    vertical-align:middle;
+    font-weight: 300;
+    font-size: 12px;
 
-table.display th{
-  background: #db3232;
-}
-table.display td{
-   background: #fff;
- }
-
-table.responsive-table{
-  box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
-}
-
-@media (max-width: 30em){
-    table.responsive-table{
-      box-shadow: none;
-    }
-    table.responsive-table thead{
-      display: none;
-    }
-  table.display th,
-  table.display td{
-    padding: .5em;
+    border-bottom: solid 1px rgba(255,255,255,0.1);
+  }
+  tr:hover td {
+    background:#4E5066;
+    color:#FFFFFF;
+    border-top: 1px solid #22262e;
+  }
+  tr:nth-child(odd) td {
+  background:#EBEBEB;
   }
 
-  table.responsive-table td:nth-child(1):before{
-    content: 'ID';
-  }
-  table.responsive-table td:nth-child(2):before{
-    content: 'Project Description';
-  }
-  table.responsive-table td:nth-child(3):before{
-    content: 'Customer Name';
-  }
-  table.responsive-table td:nth-child(4):before{
-    content: 'Date Created';
-  }
-  table.responsive-table td:nth-child(1),
-  table.responsive-table td:nth-child(2),
-  table.responsive-table td:nth-child(3),
-  table.responsive-table td:nth-child(4){
-    padding-left: 25%;
-  }
-  table.responsive-table td:nth-child(1):before,
-  table.responsive-table td:nth-child(2):before,
-  table.responsive-table td:nth-child(3):before,
-  table.responsive-table td:nth-child(4):before{
-    position: absolute;
-    ;left: 50%;
-    font-weight: bold;
+  tr:nth-child(odd):hover td {
+  background:#4E5066;
   }
 
-    table.responsive-table tr,
-    table.responsive-table td{
-        display: block;
-    }
-    table.responsive-table tr{
-        position: relative;
-        margin-bottom: 2em;
-    box-shadow: 0 1px 10px rgba(0, 0, 0, 0.2);
-    }
-    table.responsive-table td{
-        border-top: none;
-    }
-    table.responsive-table td.organisationnumber{
-        background: #D5E0CC;
-        border-top: 2px solid #B3BFAA;
-    }
-    table.responsive-table td.actions{
-        position: absolute;
-        top: 0;
-        right: 0;
-        border: none;
-        background: none;
-    }
+  /* demo styles */
 
+  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+  body{
+
+    font-family: 'Roboto', sans-serif;
+  }
+  section{
+    margin: 50px;
+  }
+
+  /* for custom scrollbar for webkit browser*/
+
+  ::-webkit-scrollbar {
+      width: 6px;
+  }
+  ::-webkit-scrollbar-track {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
+  ::-webkit-scrollbar-thumb {
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  }
 }
