--- a/WebContent/css/cws.css
+++ b/WebContent/css/cws.css
@@ -5,6 +5,7 @@ body {
   margin: 0;
   width: 100%;
   min-height: 100vh;
+  color:black;
 }
 /* Cost Worksheet */
 label{
@@ -192,14 +193,13 @@ hr {
   margin-left: 10px;
   cursor: pointer;
   transition: all 0.3s ease-out;
-  width: 150px;
+  width: 110px;
   height:35px;
-
 }
   /*Table)*/
   h1{
     font-size: 30px;
-
+    color: black;
     text-transform: uppercase;
     font-weight: 300;
     text-align: center;
@@ -212,7 +212,7 @@ hr {
   .tbl-header{
     background-color: rgba(255,255,255,0.3);
    }
-  .tbl-content{
+ .tbl-content{
     height:300px;
     overflow-x:auto;
     margin-top: 0px;
@@ -223,9 +223,8 @@ hr {
     text-align: left;
     font-weight: 500;
     font-size: 12px;
-    background-color: #db3232;
+    color: black;
     text-transform: uppercase;
-    color:white;
   }
   td{
     padding: 15px;
@@ -233,33 +232,9 @@ hr {
     vertical-align:middle;
     font-weight: 300;
     font-size: 12px;
-
+    color: black;
     border-bottom: solid 1px rgba(255,255,255,0.1);
   }
-  tr:hover td {
-    background:#4E5066;
-    color:#FFFFFF;
-    border-top: 1px solid #22262e;
-  }
-  tr:nth-child(odd) td {
-  background:#EBEBEB;
-  }
-
-  tr:nth-child(odd):hover td {
-  background:#4E5066;
-  }
-
-  /* demo styles */
-
-  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-  body{
-
-    font-family: 'Roboto', sans-serif;
-  }
-  section{
-    margin: 50px;
-  }
-
   /* for custom scrollbar for webkit browser*/
 
   ::-webkit-scrollbar {
@@ -271,4 +246,37 @@ hr {
   ::-webkit-scrollbar-thumb {
       -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   }
+ /*hover*/
+tr:hover td {
+  background:#4E5066;
+  color:#FFFFFF;
+  border-top: 1px solid #22262e;
+}
+ 
+tr:first-child {
+  border-top:none;
+}
+
+tr:last-child {
+  border-bottom:none;
+}
+ 
+tr:nth-child(odd) td {
+  background:#EBEBEB;
+}
+ 
+tr:nth-child(odd):hover td {
+  background:#4E5066;
+}
+
+tr:last-child td:first-child {
+  border-bottom-left-radius:3px;
+}
+ 
+tr:last-child td:last-child {
+  border-bottom-right-radius:3px;
+}
+ 
+td:last-child {
+  border-right: 0px;
 }
